thirdparty/include/libs/raylib55/include/raylib.h

    typedef enum bool { false = 0, true = !false } bool;
typedef struct RLVector2 {
    float x;                
    float y;                
} RLVector2;
typedef struct RLColor {
    unsigned char r;        
    unsigned char g;        
    unsigned char b;        
    unsigned char a;        
} RLColor;
typedef struct RLRectangle {
    float x;                
    float y;                
    float width;            
    float height;           
} RLRectangle;
typedef struct RLImage {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} RLImage;
typedef struct RLTexture {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} RLTexture;
typedef RLTexture RLTexture2D;
typedef struct GlyphInfo {
    int value;              
    int offsetX;            
    int offsetY;            
    int advanceX;           
    RLImage image;            
} GlyphInfo;
typedef struct RLFont {
    int baseSize;           
    int glyphCount;         
    int glyphPadding;       
    RLTexture2D texture;      
    RLRectangle *recs;        
    GlyphInfo *glyphs;      
} RLFont;
typedef enum {
    PIXELFORMAT_UNCOMPRESSED_GRAYSCALE = 1, 
    PIXELFORMAT_UNCOMPRESSED_GRAY_ALPHA,    
    PIXELFORMAT_UNCOMPRESSED_R5G6B5,        
    PIXELFORMAT_UNCOMPRESSED_R8G8B8,        
    PIXELFORMAT_UNCOMPRESSED_R5G5B5A1,      
    PIXELFORMAT_UNCOMPRESSED_R4G4B4A4,      
    PIXELFORMAT_UNCOMPRESSED_R8G8B8A8,      
    PIXELFORMAT_UNCOMPRESSED_R32,           
    PIXELFORMAT_UNCOMPRESSED_R32G32B32,     
    PIXELFORMAT_UNCOMPRESSED_R32G32B32A32,  
    PIXELFORMAT_UNCOMPRESSED_R16,           
    PIXELFORMAT_UNCOMPRESSED_R16G16B16,     
    PIXELFORMAT_UNCOMPRESSED_R16G16B16A16,  
    PIXELFORMAT_COMPRESSED_DXT1_RGB,        
    PIXELFORMAT_COMPRESSED_DXT1_RGBA,       
    PIXELFORMAT_COMPRESSED_DXT3_RGBA,       
    PIXELFORMAT_COMPRESSED_DXT5_RGBA,       
    PIXELFORMAT_COMPRESSED_ETC1_RGB,        
    PIXELFORMAT_COMPRESSED_ETC2_RGB,        
    PIXELFORMAT_COMPRESSED_ETC2_EAC_RGBA,   
    PIXELFORMAT_COMPRESSED_PVRT_RGB,        
    PIXELFORMAT_COMPRESSED_PVRT_RGBA,       
    PIXELFORMAT_COMPRESSED_ASTC_4x4_RGBA,   
    PIXELFORMAT_COMPRESSED_ASTC_8x8_RGBA    
} RLPixelFormat;
RLAPI RLImage LoadImage(const char *fileName);                                                             
RLAPI RLImage LoadImageRaw(const char *fileName, int width, int height, int format, int headerSize);       
RLAPI RLImage LoadImageAnim(const char *fileName, int *frames);                                            
RLAPI RLImage LoadImageAnimFromMemory(const char *fileType, const unsigned char *fileData, int dataSize, int *frames); 
RLAPI RLImage LoadImageFromMemory(const char *fileType, const unsigned char *fileData, int dataSize);      
RLAPI RLImage LoadImageFromTexture(RLTexture2D texture);                                                     
RLAPI RLImage LoadImageFromScreen(void);                                                                   
RLAPI bool IsImageValid(RLImage image);                                                                    
RLAPI void UnloadImage(RLImage image);                                                                     
RLAPI bool ExportImage(RLImage image, const char *fileName);                                               
RLAPI unsigned char *ExportImageToMemory(RLImage image, const char *fileType, int *fileSize);              
RLAPI bool ExportImageAsCode(RLImage image, const char *fileName);                                         
RLAPI RLImage GenImageColor(int width, int height, RLColor color);                                           
RLAPI RLImage GenImageGradientLinear(int width, int height, int direction, RLColor start, RLColor end);        
RLAPI RLImage GenImageGradientRadial(int width, int height, float density, RLColor inner, RLColor outer);      
RLAPI RLImage GenImageGradientSquare(int width, int height, float density, RLColor inner, RLColor outer);      
RLAPI RLImage GenImageChecked(int width, int height, int checksX, int checksY, RLColor col1, RLColor col2);    
RLAPI RLImage GenImageWhiteNoise(int width, int height, float factor);                                     
RLAPI RLImage GenImagePerlinNoise(int width, int height, int offsetX, int offsetY, float scale);           
RLAPI RLImage GenImageCellular(int width, int height, int tileSize);                                       
RLAPI RLImage GenImageText(int width, int height, const char *text);                                       
RLAPI RLImage ImageCopy(RLImage image);                                                                      
RLAPI RLImage ImageFromImage(RLImage image, RLRectangle rec);                                                  
RLAPI RLImage ImageFromChannel(RLImage image, int selectedChannel);                                          
RLAPI RLImage ImageText(const char *text, int fontSize, RLColor color);                                      
RLAPI RLImage ImageTextEx(RLFont font, const char *text, float fontSize, float spacing, RLColor tint);         
RLAPI void ImageFormat(RLImage *image, int newFormat);                                                     
RLAPI void ImageToPOT(RLImage *image, RLColor fill);                                                         
RLAPI void ImageCrop(RLImage *image, RLRectangle crop);                                                      
RLAPI void ImageAlphaCrop(RLImage *image, float threshold);                                                
RLAPI void ImageAlphaClear(RLImage *image, RLColor color, float threshold);                                  
RLAPI void ImageAlphaMask(RLImage *image, RLImage alphaMask);                                                
RLAPI void ImageAlphaPremultiply(RLImage *image);                                                          
RLAPI void ImageBlurGaussian(RLImage *image, int blurSize);                                                
RLAPI void ImageKernelConvolution(RLImage *image, const float *kernel, int kernelSize);                    
RLAPI void ImageResize(RLImage *image, int newWidth, int newHeight);                                       
RLAPI void ImageResizeNN(RLImage *image, int newWidth,int newHeight);                                      
RLAPI void ImageResizeCanvas(RLImage *image, int newWidth, int newHeight, int offsetX, int offsetY, RLColor fill); 
RLAPI void ImageMipmaps(RLImage *image);                                                                   
RLAPI void ImageDither(RLImage *image, int rBpp, int gBpp, int bBpp, int aBpp);                            
RLAPI void ImageFlipVertical(RLImage *image);                                                              
RLAPI void ImageFlipHorizontal(RLImage *image);                                                            
RLAPI void ImageRotate(RLImage *image, int degrees);                                                       
RLAPI void ImageRotateCW(RLImage *image);                                                                  
RLAPI void ImageRotateCCW(RLImage *image);                                                                 
RLAPI void ImageColorTint(RLImage *image, RLColor color);                                                    
RLAPI void ImageColorInvert(RLImage *image);                                                               
RLAPI void ImageColorGrayscale(RLImage *image);                                                            
RLAPI void ImageColorContrast(RLImage *image, float contrast);                                             
RLAPI void ImageColorBrightness(RLImage *image, int brightness);                                           
RLAPI void ImageColorReplace(RLImage *image, RLColor color, RLColor replace);                                  
RLAPI RLColor *LoadImageColors(RLImage image);                                                               
RLAPI RLColor *LoadImagePalette(RLImage image, int maxPaletteSize, int *colorCount);                         
RLAPI void UnloadImageColors(RLColor *colors);                                                             
RLAPI void UnloadImagePalette(RLColor *colors);                                                            
RLAPI RLRectangle GetImageAlphaBorder(RLImage image, float threshold);                                       
RLAPI RLColor GetImageColor(RLImage image, int x, int y);                                                    
RLAPI void ImageClearBackground(RLImage *dst, RLColor color);                                                
RLAPI void ImageDrawPixel(RLImage *dst, int posX, int posY, RLColor color);                                  
RLAPI void ImageDrawPixelV(RLImage *dst, RLVector2 position, RLColor color);                                   
RLAPI void ImageDrawLine(RLImage *dst, int startPosX, int startPosY, int endPosX, int endPosY, RLColor color); 
RLAPI void ImageDrawLineV(RLImage *dst, RLVector2 start, RLVector2 end, RLColor color);                          
RLAPI void ImageDrawLineEx(RLImage *dst, RLVector2 start, RLVector2 end, int thick, RLColor color);              
RLAPI void ImageDrawCircle(RLImage *dst, int centerX, int centerY, int radius, RLColor color);               
RLAPI void ImageDrawCircleV(RLImage *dst, RLVector2 center, int radius, RLColor color);                        
RLAPI void ImageDrawCircleLines(RLImage *dst, int centerX, int centerY, int radius, RLColor color);          
RLAPI void ImageDrawCircleLinesV(RLImage *dst, RLVector2 center, int radius, RLColor color);                   
RLAPI void ImageDrawRectangle(RLImage *dst, int posX, int posY, int width, int height, RLColor color);       
RLAPI void ImageDrawRectangleV(RLImage *dst, RLVector2 position, RLVector2 size, RLColor color);                 
RLAPI void ImageDrawRectangleRec(RLImage *dst, RLRectangle rec, RLColor color);                                
RLAPI void ImageDrawRectangleLines(RLImage *dst, RLRectangle rec, int thick, RLColor color);                   
RLAPI void ImageDrawTriangle(RLImage *dst, RLVector2 v1, RLVector2 v2, RLVector2 v3, RLColor color);               
RLAPI void ImageDrawTriangleEx(RLImage *dst, RLVector2 v1, RLVector2 v2, RLVector2 v3, RLColor c1, RLColor c2, RLColor c3); 
RLAPI void ImageDrawTriangleLines(RLImage *dst, RLVector2 v1, RLVector2 v2, RLVector2 v3, RLColor color);          
RLAPI void ImageDrawTriangleFan(RLImage *dst, RLVector2 *points, int pointCount, RLColor color);               
RLAPI void ImageDraw(RLImage *dst, RLImage src, RLRectangle srcRec, RLRectangle dstRec, RLColor tint);             
RLAPI void ImageDrawText(RLImage *dst, const char *text, int posX, int posY, int fontSize, RLColor color);   
RLAPI void ImageDrawTextEx(RLImage *dst, RLFont font, const char *text, RLVector2 position, float fontSize, float spacing, RLColor tint); 