engine/thirdparty/raylib55.c3i


// RLImage loading functions
// NOTE: This functions do not require GPU access
// Load image from file into CPU memory (RAM)
fn RLImage loadImage(ZString fileName) @cname("LoadImage");
// Load image from RAW file data
fn RLImage loadImageRaw(ZString fileName, CInt width, CInt height, CInt format, CInt headerSize) @cname("LoadImageRaw");
// Load image from SVG file data or string with specified size
fn RLImage loadImageSvg(ZString fileNameOrString, CInt width, CInt height) @cname("LoadImageSvg");
// Load image sequence from file (frames appended to image.data)
fn RLImage loadImageAnim(ZString fileName, CInt* frames) @cname("LoadImageAnim");
// Load image sequence from memory buffer
fn RLImage loadImageAnimFromMemory(ZString fileType, ZString fileData, CInt dataSize, CInt* frames) @cname("LoadImageAnimFromMemory");
// Load image from memory buffer, fileType refers to extension: i.e. '.png'
fn RLImage loadImageFromMemory(ZString fileType, char* fileData, CInt dataSize) @cname("LoadImageFromMemory");
// Load image from GPU texture data
fn RLImage loadImageFromTexture(RLTexture2D texture) @cname("LoadImageFromTexture");
// Load image from screen buffer and (screenshot)
fn RLImage loadImageFromScreen() @cname("LoadImageFromScreen");
// Check if an image is valid (data and parameters)
fn bool isImageValid(RLImage image) @cname("IsImageValid");
// Unload image from CPU memory (RAM)
fn void unloadImage(RLImage image) @cname("UnloadImage");
// Export image data to file, returns true on success
fn bool exportImage(RLImage image, ZString fileName) @cname("ExportImage");
// Export image to memory buffer
fn char* exportImageToMemory(RLImage image, ZString fileType, CInt* fileSize) @cname("ExportImageToMemory");
// Export image as code file defining an array of bytes, returns true on success
fn bool exportImageAsCode(RLImage image, ZString fileName) @cname("ExportImageAsCode");

// RLImage generation functions
// Generate image: plain color
fn RLImage genImageColor(CInt width, CInt height, RLColor color) @cname("GenImageColor");
// Generate image: vertical gradient
fn RLImage genImageGradientLinear(CInt width, CInt height, CInt direction, RLColor start, RLColor end) @cname("GenImageGradientLinear");
// Generate image: horizontal gradient
fn RLImage genImageGradientSquare(CInt width, CInt height, float density, RLColor inner, RLColor outer) @cname("GenImageGradientSquare");
// Generate image: radial gradient
fn RLImage genImageGradientRadial(CInt width, CInt height, float density, RLColor inner, RLColor outer) @cname("GenImageGradientRadial");
// Generate image: checked
fn RLImage genImageChecked(CInt width, CInt height, CInt checksX, CInt checksY, RLColor col1, RLColor col2) @cname("GenImageChecked");
// Generate image: white noise
fn RLImage genImageWhiteNoise(CInt width, CInt height, float factor) @cname("GenImageWhiteNoise");
// Generate image: perlin noise
fn RLImage genImagePerlinNoise(CInt width, CInt height, CInt offsetX, CInt offsetY, float scale) @cname("GenImagePerlinNoise");
// Generate image: cellular algorithm, bigger tileSize means bigger cells
fn RLImage genImageCellular(CInt width, CInt height, CInt tileSize) @cname("GenImageCellular");
// Generate image: grayscale image from text data
fn RLImage genImageText(CInt width, CInt height, ZString text) @cname("GenImageText");

// RLImage manipulation functions
// Create an image duplicate (useful for transformations)
fn RLImage imageCopy(RLImage image) @cname("ImageCopy");
// Create an image from another image piece
fn RLImage imageFromImage(RLImage image, RLRectangle rec) @cname("ImageFromImage");
// Create an image from a selected channel of another image (GRAYSCALE)
fn RLImage imageFromChannel(RLImage image, CInt selectedChannel) @cname("ImageFromChannel");
// Create an image from text (default font)
fn RLImage imageText(ZString text, CInt fontSize, RLColor color) @cname("ImageText");
// Create an image from text (custom sprite font)
fn RLImage imageTextEx(RLFont font, ZString text, float fontSize, float spacing, RLColor tint) @cname("ImageTextEx");
// Convert image data to desired format
fn void imageFormat(RLImage* image, RLPixelFormat newFormat) @cname("ImageFormat");
// Convert image to POT (power-of-two)
fn void imageToPOT(RLImage* image, RLColor fill) @cname("ImageToPOT");
// Crop an image to a defined rectangle
fn void imageCrop(RLImage* image, RLRectangle crop) @cname("ImageCrop");
// Crop image depending on alpha value
fn void imageAlphaCrop(RLImage* image, float threshold) @cname("ImageAlphaCrop");
// Clear alpha channel to desired color
fn void imageAlphaClear(RLImage* image, RLColor color, float threshold) @cname("ImageAlphaClear");
// Apply alpha mask to image
fn void imageAlphaMask(RLImage* image, RLImage alphaMask) @cname("ImageAlphaMask");
// Premultiply alpha channel
fn void imageAlphaPremultiply(RLImage* image) @cname("ImageAlphaPremultiply");
// Apply Gaussian blur using a box blur approximation
fn void imageBlurGaussian(RLImage* image, CInt blurSize) @cname("ImageBlurGaussian");
// Apply custom square convolution kernel to image
fn void imageKernelConvolution(RLImage *image, float *kernel, CInt kernelSize) @cname("ImageKernelConvolution");
// Resize image (Bicubic scaling algorithm)
fn void imageResize(RLImage* image, CInt newWidth, CInt newHeight) @cname("ImageResize");
// Resize image (Nearest-Neighbor scaling algorithm)
fn void imageResizeNN(RLImage* image, CInt newWidth,CInt newHeight) @cname("ImageResizeNN");
// Resize canvas and fill with color
fn void imageResizeCanvas(RLImage* image, CInt newWidth, CInt newHeight, CInt offsetX, CInt offsetY, RLColor fill) @cname("ImageResizeCanvas");
// Compute all mipmap levels for a provided image
fn void imageMipmaps(RLImage* image) @cname("ImageMipmaps");
// Dither image data to 16bpp or lower (Floyd-Steinberg dithering)
fn void imageDither(RLImage* image, CInt rBpp, CInt gBpp, CInt bBpp, CInt aBpp) @cname("ImageDither");
// Flip image vertically
fn void imageFlipVertical(RLImage* image) @cname("ImageFlipVertical");
// Flip image horizontally
fn void imageFlipHorizontal(RLImage* image) @cname("ImageFlipHorizontal");
// Rotate image by input angle in degrees (-359 to 359)
fn void imageRotate(RLImage* image, CInt degrees) @cname("ImageRotate");
// Rotate image clockwise 90deg
fn void imageRotateCW(RLImage* image) @cname("ImageRotateCW");
// Rotate image counter-clockwise 90deg
fn void imageRotateCCW(RLImage* image) @cname("ImageRotateCCW");
// Modify image color: tint
fn void imageColorTint(RLImage* image, RLColor color) @cname("ImageColorTint");
// Modify image color: invert
fn void imageColorInvert(RLImage* image) @cname("ImageColorInvert");
// Modify image color: grayscale
fn void imageColorGrayscale(RLImage* image) @cname("ImageColorGrayscale");
// Modify image color: contrast (-100 to 100)
fn void imageColorContrast(RLImage* image, float contrast) @cname("ImageColorContrast");
// Modify image color: brightness (-255 to 255)
fn void imageColorBrightness(RLImage* image, CInt brightness) @cname("ImageColorBrightness");
// Modify image color: replace color
fn void imageColorReplace(RLImage* image, RLColor color, RLColor replace) @cname("ImageColorReplace");
// Load color data from image as a RLColor array (RGBA - 32bit)
fn RLColor *loadImageColors(RLImage image) @cname("LoadImageColors");
// Load colors palette from image as a RLColor array (RGBA - 32bit)
fn RLColor *loadImagePalette(RLImage image, CInt maxPaletteSize, CInt *colorCount) @cname("LoadImagePalette");
// Unload color data loaded with LoadImageColors()
fn void unloadImageColors(RLColor* colors) @cname("UnloadImageColors");
// Unload colors palette loaded with LoadImagePalette()
fn void unloadImagePalette(RLColor* colors) @cname("UnloadImagePalette");
// Get image alpha border rectangle
fn RLRectangle getImageAlphaBorder(RLImage image, float threshold) @cname("GetImageAlphaBorder");
// Get image pixel color at (x, y) position
fn RLColor getImageColor(RLImage image, CInt x, CInt y) @cname("GetImageColor");

// RLImage drawing functions
// NOTE: RLImage software-rendering functions (CPU)
// Clear image background with given color
fn void imageClearBackground(RLImage* dst, RLColor color) @cname("ImageClearBackground");
// Draw pixel within an image
fn void imageDrawPixel(RLImage* dst, CInt posX, CInt posY, RLColor color) @cname("ImageDrawPixel");
// Draw pixel within an image (Vector version)
fn void imageDrawPixelV(RLImage* dst, RLVector2 position, RLColor color) @cname("ImageDrawPixelV");
// Draw line within an image
fn void imageDrawLine(RLImage* dst, CInt startPosX, CInt startPosY, CInt endPosX, CInt endPosY, RLColor color) @cname("ImageDrawLine");
// Draw line within an image (Vector version)
fn void imageDrawLineV(RLImage* dst, RLVector2 start, RLVector2 end, RLColor color) @cname("ImageDrawLineV");
// Draw a line defining thickness within an image
fn void imageDrawLineEx(RLImage *dst, RLVector2 start, RLVector2 end, CInt thick, RLColor color) @cname("ImageDrawLineEx");
// Draw circle within an image
fn void imageDrawCircle(RLImage* dst, CInt centerX, CInt centerY, CInt radius, RLColor color) @cname("ImageDrawCircle");
// Draw circle within an image (Vector version)
fn void imageDrawCircleV(RLImage* dst, RLVector2 center, CInt radius, RLColor color) @cname("ImageDrawCircleV");
// Draw circle outline within an image
fn void imageDrawCircleLines(RLImage* dst, CInt centerX, CInt centerY, CInt radius, RLColor color) @cname("ImageDrawCircleLines");
// Draw circle outline within an image (Vector version)
fn void imageDrawCircleLinesV(RLImage* dst, RLVector2 center, CInt radius, RLColor color) @cname("ImageDrawCircleLinesV");
// Draw rectangle within an image
fn void imageDrawRectangle(RLImage* dst, CInt posX, CInt posY, CInt width, CInt height, RLColor color) @cname("ImageDrawRectangle");
// Draw rectangle within an image (Vector version)
fn void imageDrawRectangleV(RLImage* dst, RLVector2 position, RLVector2 size, RLColor color) @cname("ImageDrawRectangleV");
// Draw rectangle within an image
fn void imageDrawRectangleRec(RLImage* dst, RLRectangle rec, RLColor color) @cname("ImageDrawRectangleRec");
// Draw rectangle lines within an image
fn void imageDrawRectangleLines(RLImage* dst, RLRectangle rec, CInt thick, RLColor color) @cname("ImageDrawRectangleLines");
// Draw triangle within an image
fn void imageDrawTriangle(RLImage *dst, RLVector2 v1, RLVector2 v2, RLVector2 v3, RLColor color) @cname("ImageDrawTriangle");
// Draw triangle with interpolated colors within an image
fn void imageDrawTriangleEx(RLImage *dst, RLVector2 v1, RLVector2 v2, RLVector2 v3, RLColor c1, RLColor c2, RLColor c3) @cname("ImageDrawTriangleEx");
// Draw triangle outline within an image
fn void imageDrawTriangleLines(RLImage *dst, RLVector2 v1, RLVector2 v2, RLVector2 v3, RLColor color) @cname("ImageDrawTriangleLines");
// Draw a triangle fan defined by points within an image (first vertex is the center)
fn void imageDrawTriangleFan(RLImage *dst, RLVector2 *points, CInt pointCount, RLColor color) @cname("ImageDrawTriangleFan");
// Draw a triangle strip defined by points within an image
fn void imageDrawTriangleStrip(RLImage *dst, RLVector2 *points, CInt pointCount, RLColor color);
// Draw a source image within a destination image (tint applied to source)
fn void imageDraw(RLImage* dst, RLImage src, RLRectangle srcRec, RLRectangle dstRec, RLColor tint) @cname("ImageDraw");
// Draw text (using default font) within an image (destination)
fn void imageDrawText(RLImage* dst, ZString text, CInt posX, CInt posY, CInt fontSize, RLColor color) @cname("ImageDrawText");
// Draw text (custom sprite font) within an image (destination)
fn void imageDrawTextEx(RLImage* dst, RLFont font, ZString text, RLVector2 position, float fontSize, float spacing, RLColor tint) @cname("ImageDrawTextEx");
